--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
